<resources>
    <string name="app_name">Movie Discover</string>
    <string name="movies_text">Movies</string>
    <string name="series_text">Series</string>
    <string name="refresh_text">Refresh</string>
    <string name="poster_content_desc">poster</string>
    <string name="release_date_text">Release Date</string>
    <string name="average_vote_text">Average Vote</string>
    <string name="overview_text">Overview</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="api_error_message">Api Error</string>
    <string name="unknown_error_message">Unknown Error</string>
    <string name="no_data">No data</string>
</resources>