<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/button1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies_text" />

            <Button
                android:id="@+id/button2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/series_text" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="15dp"
            android:text="@string/app_name"
            android:textSize="25sp" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/linearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.halilmasali.moviediscover.ui.CustomItemView
                android:id="@+id/customItemView1"
                app:refreshText="@string/refresh_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.halilmasali.moviediscover.ui.CustomItemView
                android:id="@+id/customItemView2"
                app:refreshText="@string/refresh_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.halilmasali.moviediscover.ui.CustomItemView
                android:id="@+id/customItemView3"
                app:refreshText="@string/refresh_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.halilmasali.moviediscover.ui.CustomItemView
                android:id="@+id/customItemView4"
                app:refreshText="@string/refresh_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>