<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:id="@+id/imageBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/poster_content_desc"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/ic_refresh" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        tools:text="Title"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imagePoster"
                            android:layout_width="130dp"
                            android:layout_height="180dp"
                            android:layout_marginStart="8dp"
                            android:contentDescription="@string/poster_content_desc"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/ic_refresh" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/release_date_text"
                            android:textAlignment="center"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toTopOf="@+id/textView2"
                            app:layout_constraintEnd_toStartOf="@+id/textReleaseDate"
                            app:layout_constraintStart_toEndOf="@+id/imagePoster"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/average_vote_text"
                            android:textAlignment="center"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textAvgVote"
                            app:layout_constraintStart_toEndOf="@+id/imagePoster"
                            app:layout_constraintTop_toBottomOf="@+id/textView1" />

                        <TextView
                            android:id="@+id/textReleaseDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toTopOf="@+id/textAvgVote"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView1"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="2023-07-03" />

                        <TextView
                            android:id="@+id/textAvgVote"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView2"
                            app:layout_constraintTop_toBottomOf="@+id/textReleaseDate"
                            tools:text="8.5" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/text8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview_text"
                        android:layout_margin="5dp"
                        android:textAppearance="?attr/textAppearanceHeadline6" />
                    <TextView
                        android:id="@+id/textOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        tools:text="About Movie"
                        android:textSize="15sp"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewDetailContent"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>